--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,19 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+:root {
+  --color-white: #fff;
+  --color-light-pink: #f53ca0;
+  --color-light-blue: #5fd8ff;
+  --bg-color: #101827;
+  --gradient-color-1: linear-gradient(to bottom, #5ce1e6, #f53ca0);
+}
 
 * {
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
   margin: 0;
   padding: 0;
-  /* background-color: #f0f0fa; */
-  font-family: 'Poppins', sans-serif;
+  background-color: var(--bg-color);
+  font-family: "Poppins", sans-serif;
+  padding: 20px 40px;
 }
 
 ::-webkit-scrollbar {
