--- a/components/Navbar/index.module.css
+++ b/components/Navbar/index.module.css
@@ -65,14 +65,91 @@
   margin-right: 8px;
 }
 
-
-@media(max-width:750px){
-  .links_container_div,.btn_container_div{
-    display:none;
-  }
+.ham_parent_container {
+  width: 40px;
+  height: 40px;
+  display: none;
 }
+
+.ham {
+  width: 30px;
+  height: 5px;
+  border-radius: 8px;
+  background: var(--color-white);
+  position: relative;
+  top: 15px;
+  transition: 0.3s;
+  left: -10px;
+}
+
+.ham::before {
+  width: 50px;
+  height: 5px;
+  content: "";
+  border-radius: 8px;
+  background: var(--color-white);
+  position: absolute;
+  top: -15px;
+  left: -10px;
+}
+
+.ham::after {
+  width: 50px;
+  height: 5px;
+  content: "";
+  border-radius: 8px;
+  background: var(--color-white);
+  position: absolute;
+  top: 15px;
+  left: -10px;
+}
+
+.ham_open {
+  width: 30px;
+  height: 5px;
+  border-radius: 8px;
+  background: transparent;
+  position: relative;
+  top: 15px;
+  transition: 0.3s;
+  left: -10px;
+}
+
+.ham_open::before {
+  width: 50px;
+  height: 5px;
+  content: "";
+  border-radius: 8px;
+  background: var(--color-white);
+  position: absolute;
+  top: 0px;
+  left: -10px;
+  transform: rotate(90deg);
+}
+
+.ham_open::after {
+  width: 50px;
+  height: 5px;
+  content: "";
+  border-radius: 8px;
+  background: var(--color-white);
+  position: absolute;
+  top: 0px;
+  left: -10px;
+}
+
 @media (max-width: 750px) {
+  .links_container_div,
+  .btn_container_div {
+    display: none;
+  }
+
   .nav_container_div {
     padding: 10px;
+  }
+
+  .ham_parent_container {
+    display: flex;
+    align-content: center;
   }
 }
