--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,6 @@
 
 body {
   margin: 0;
-  padding: 0;
   background-color: var(--bg-color);
   font-family: "Poppins", sans-serif;
   padding: 20px 40px;
@@ -39,4 +38,10 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #555;
+}
+
+@media (max-width: 750px) {
+  body {
+    padding: 10px 20px;
+  }
 }
