--- a/components/Navbar/index.module.css
+++ b/components/Navbar/index.module.css
@@ -69,6 +69,8 @@
   width: 40px;
   height: 40px;
   display: none;
+  position: relative;
+  z-index: 3;
 }
 
 .ham {
@@ -78,7 +80,7 @@
   background: var(--color-white);
   position: relative;
   top: 15px;
-  transition: 0.3s;
+  transition: 0.8s;
   left: -10px;
 }
 
@@ -91,6 +93,7 @@
   position: absolute;
   top: -15px;
   left: -10px;
+  transition: 0.3s;
 }
 
 .ham::after {
@@ -102,6 +105,7 @@
   position: absolute;
   top: 15px;
   left: -10px;
+  transition: 0.3s;
 }
 
 .ham_open {
@@ -111,8 +115,9 @@
   background: transparent;
   position: relative;
   top: 15px;
-  transition: 0.3s;
   left: -10px;
+  transition: 0.8s;
+  transform: rotate(310deg);
 }
 
 .ham_open::before {
@@ -125,6 +130,7 @@
   top: 0px;
   left: -10px;
   transform: rotate(90deg);
+  transition: 0.3s;
 }
 
 .ham_open::after {
@@ -136,6 +142,7 @@
   position: absolute;
   top: 0px;
   left: -10px;
+  transition: 0.3s;
 }
 
 @media (max-width: 750px) {
