--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 
 :root {
   --color-white: #fff;
+  --color-black: #000;
   --color-light-pink: #f53ca0;
   --color-light-blue: #5fd8ff;
   --bg-color: #101827;
