--- a/components/Navbar/index.module.css
+++ b/components/Navbar/index.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: space-between;
   font-family: "Poppins";
+  padding: 20px 40px;
 }
 
 .nav_container_div h1 {
@@ -152,7 +153,7 @@
   }
 
   .nav_container_div {
-    padding: 10px;
+    padding: 10px 20px;
   }
 
   .ham_parent_container {
