--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,8 @@
   --color-light-pink: #f53ca0;
   --color-light-blue: #5fd8ff;
   --bg-color: #101827;
-  --footer-bg-color: #01132d;
+  --footer-bg-color: #030d22;
+  --form-color: #f5f5f5;
   --gradient-color-1: linear-gradient(to bottom, #5ce1e6, #f53ca0);
 }
 
