--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@
   --bg-color: #101827;
   --footer-bg-color: #030d22;
   --form-color: #f5f5f5;
+  --color-title-icon: #404040;
   --gradient-color-1: linear-gradient(to bottom, #5ce1e6, #f53ca0);
 }
 
@@ -44,26 +45,26 @@ body {
 }
 
 @media (max-width: 750px) {
-  body {
-.loader {
-  width: 48px;
-  height: 48px;
-  border: 5px solid #fff;
-  border-bottom-color: #F53CA0;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-  position: absolute;
-  top: 40vh;
-  z-index: 50;
-}
-
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
+  .loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #fff;
+    border-bottom-color: #f53ca0;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    position: absolute;
+    top: 40vh;
+    z-index: 50;
   }
-  100% {
-    transform: rotate(360deg);
+
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
