--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,11 @@
+.logo_container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 25px 20px;
+  background: var(--footer-bg-color);
+}
+
 .ai_container {
   text-align: center;
   padding: 40px 0;
@@ -26,14 +34,31 @@
   height: 74px;
   border-radius: 10px;
   color: var(--color-white);
-  background: radial-gradient(
-    rgba(255, 255, 255, 0.3),
+  background: linear-gradient(
+    var(--color-light-pink),
+    var(--form-color),
     var(--color-light-pink)
   );
   border: none;
   font-weight: 800;
   font-size: 18px;
   cursor: pointer;
+}
+
+.emain_info_container {
+  color: var(--color-white);
+  text-align: left;
+  padding: 20px 40px;
+}
+
+.emain_info_container button {
+  width: 170px;
+  height: 64px;
+  background: linear-gradient(
+    top bottom,
+    var(--color-white),
+    var(--color-light-blue)
+  );
 }
 
 .goal_container {
@@ -44,6 +69,7 @@
 
 .goal_container h1 {
   color: var(--color-light-blue);
+  text-transform: capitalize;
 }
 
 .goal_container h1 span {
@@ -75,6 +101,10 @@
 }
 
 @media (max-width: 750px) {
+  .logo_container {
+    flex-wrap: wrap;
+  }
+
   .ai_container {
     font-size: 16px;
   }
@@ -86,5 +116,13 @@
 
   .goal_container {
     font-size: 16px;
+  }
+
+  .logo_container img {
+    transform: scale(0.5);
+  }
+
+  .emain_info_container {
+    padding: 10px 20px;
   }
 }
