--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
   --color-light-pink: #f53ca0;
   --color-light-blue: #5fd8ff;
   --bg-color: #101827;
+  --get-started-btn-color: #79d8f1;
   --footer-bg-color: #030d22;
   --form-color: #f5f5f5;
   --color-title-icon: #404040;
