--- a/components/MobileMenu/index.module.css
+++ b/components/MobileMenu/index.module.css
@@ -1,10 +1,10 @@
 .main_mobile_menu_container {
   width: 0%;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 8;
   background: var(--color-black);
   transition: 0.3s;
   overflow: hidden;
@@ -20,10 +20,10 @@
 .main_mobile_menu_container_open {
   width: 70%;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 8;
   background: var(--color-black);
   overflow: hidden;
   transition: 0.3s;
