--- a/components/Navbar/index.module.css
+++ b/components/Navbar/index.module.css
@@ -4,6 +4,11 @@
   justify-content: space-between;
   font-family: "Poppins";
   padding: 20px 40px;
+  position: sticky;
+  top: 0;
+  background: var(--bg-color);
+  z-index: 5;
+  box-shadow: 0 0 8px 4px rgba(255, 255, 255, 0.1);
 }
 
 .nav_container_div h1 {
