--- a/components/FootNavbar/index.module.css
+++ b/components/FootNavbar/index.module.css
@@ -5,7 +5,7 @@
 
 .main_info_footnavbar {
   display: flex;
-  justify: space-around;
+  justify: space-between;
   align-items: flex-start;
   width: 100%;
 }
