tailwind works old styles tailwind break fixed

--- a/components/FootNavbar/index.module.css
+++ b/components/FootNavbar/index.module.css
@@ -13,6 +13,7 @@
 .footnavbar_tab_1 {
   text-align: left;
   width: 350px;
+  margin:0 auto;
 }
 
 .footnavbar_tab_1 h1 {
@@ -93,6 +94,7 @@
   color: var(--color-white);
   width: 350px;
   text-align: center;
+  margin:0 auto;
 }
 
 .footnavbar_tab_2_info h1 {
@@ -114,8 +116,13 @@
     padding: 10px 20px;
   }
 
+  .footnavbar_tab_1{
+    margin:0;
+  }
+
   .footnavbar_tab_2 {
     text-align: left;
+    margin:0;
   }
 
   .main_info_footnavbar {
