os failure fixed back online working styling the pagination

--- a/components/UtilsComponents/CardContainer/index.module.css
+++ b/components/UtilsComponents/CardContainer/index.module.css
@@ -1,17 +1,18 @@
-.card{
-  margin:auto auto;
-  width:max-content;
-  margin-bottom:20px;
+.card {
+  margin: auto auto;
+  width: max-content;
+  margin-bottom: 20px;
 }
 
-.card_top img{
-  width:314px;
+.card_top img {
+  width: 314px;
 }
 
 .card_bottom {
   position: relative;
   width: 314px;
-  height: 147px;
+  height: 100%;
+  max-height: 147px;
   background: var(--card-color-transparent);
   border-radius: 0 0 5px 5px;
   border: double 2px transparent;
@@ -28,11 +29,11 @@
 
 .card_bottom h1 {
   color: var(--color-white);
-  font-size: 24px;
+  font-size: 22px;
   text-transform: capitalize;
-  margin-bottom:-10px;
-  padding:8px;
-  margin-top:-6px 
+  margin-bottom: -10px;
+  padding: 8px;
+  margin-top: -6px;
 }
 
 .card_bottom_info_div {
@@ -40,35 +41,33 @@
   justify-content: space-between;
   align-items: center;
   color: var(--color-white);
-  padding:8px;
+  padding: 8px;
 }
 
-.card_bottom_info_div div:nth-child(1) h3{
-  font-size:16px;
-  color:var(--color-white);
-  margin-bottom:0;
+.card_bottom_info_div div:nth-child(1) h3 {
+  font-size: 14px;
+  color: var(--color-white);
+  margin-bottom: 0;
 }
 
-.card_bottom_info_div div:nth-child(1) h2{
-  font-size:21px;
-  color:var(--nft-card-text-color);
-  margin:0;
+.card_bottom_info_div div:nth-child(1) h2 {
+  font-size: 18px;
+  color: var(--nft-card-text-color);
+  margin: 0;
 }
 
-
-.card_btn_div{
-  width:146px;
-  height:50px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  paddong:12px 8px;
-  cursor:pointer;
-  background:var(--card-color-transparent);
-  font-weight:800;
-  color:var(--color-white);
-  font-size:26px;
-  border-radius:8px;
+.card_btn_div {
+  width: 146px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background: var(--card-color-transparent);
+  font-weight: 800;
+  color: var(--color-white);
+  font-size: 20px;
+  border-radius: 10px;
   border: double 3px transparent;
   border-style: solid;
   background-image: linear-gradient(
@@ -80,15 +79,19 @@
   background-clip: content-box, border-box;
 }
 
-.stats{
-  display:flex;
-  justify-content:left;
-  align-items:center;
-  color:var(--color-white);
-  margin-left:10px;
-  margin-top:-23px;
+.stats {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  color: var(--color-white);
+  margin-top: -20px;
 }
 
-.stats p{
-  margin-right:10px;
+.stats p {
+  margin-right: 5px;
+  font-size: 10px;
+}
+
+.stats p i {
+  margin-right: 2px;
 }
