--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
   width: 14px;
   height: 14px;
   position: relative;
-  top: 12px;
+  top: 5px;
   opacity: 0.5;
   border: 1px solid var(--color-white);
   border-radius: 50%;
@@ -41,5 +41,5 @@
 .slider-arrow-l {
   z-index: 5;
   position: relative;
-  transform: translateY(-255px);
+  transform: translateY(-20rem);
 }
