--- a/styles/AuthSignin.module.css
+++ b/styles/AuthSignin.module.css
@@ -3,8 +3,8 @@
 }
 
 .main_auth_container{
-  width:40%;
-  height:600px;
+  width:50%;
+  height:800px;
   margin:auto auto;
   background:var(--color-white);
   border-radius:5px;
@@ -16,7 +16,7 @@
 
 
 .imgDivContainer{
-  height:600px;
+  height:800px;
   width:50%;
   background:url("../public/images/auth-image.png");
   background-position:center;
@@ -51,6 +51,7 @@
   display:flex;
   justify-content:space-between;
   align-items:center;
+  margin-top:-60px;
 
 }
 
@@ -72,4 +73,80 @@
 
 .mainFormContainer{
   margin-top:60px;
+}
+
+
+.inputContainer input{
+ padding:20px 10px;
+ background:var(--form-color);
+ border-radius:3px;
+ border:none;
+ width:100%;
+ font-size:15px;
+
+}
+
+.formDivContainer p{
+  width:auto;
+  position:relative;
+  height:30px;
+}
+
+.formDivContainer p a{
+  position:absolute;
+  right:0;
+  color:var(--color-black);
+}
+
+.formDivContainer button[type="submit"]{
+  width:100%;
+  padding:12px 16px;
+  background:var(--color-light-pink);
+  color:var(--color-white);
+  border-radius:5px;
+  border:none;
+  font-weight:800;
+  font-size:18px;
+
+}
+
+.hrContainer{
+  margin:30px 0px;
+  position:relative;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.hrContainer hr{
+  width:100%;
+  color:var(--form-color);
+}
+
+
+.hrContainer p{
+  position:absolute;
+  background:var(--color-white);
+  padding:5px;
+  top:-23px;
+  width:36px;
+  height:36px;
+  text-align:center;
+}
+
+
+
+@media(max-width:750px){
+
+  .main_auth_container{
+width:95%;
+  }
+
+
+  .formDivContainer{
+    width:100%;
+  }
+  .imgDivContainer{
+    display:none;
+  }
 }
