--- a/styles/AuthSignup.module.css
+++ b/styles/AuthSignup.module.css
@@ -4,7 +4,7 @@
 
 .main_auth_container{
   width:50%;
-  height:800px;
+  height:1000px;
   margin:auto auto;
   background:var(--color-white);
   border-radius:5px;
@@ -16,7 +16,7 @@
 
 
 .imgDivContainer{
-  height:800px;
+  height:1000px;
   width:50%;
   background:url("../public/images/auth-image.png");
   background-position:center;
@@ -38,7 +38,7 @@
 }
 
 .formDivContainer{
-  height:800px;
+  height:1000px;
   width:50%;
   padding:20px 60px;
 }
@@ -61,7 +61,7 @@
 .formHeader button{
   font-weight:800;
   font-size:15px;
-  padding:7px 10px;
+  padding:7px 25px;
   border-radius:4px;
   color:var(--color-light-pink);
   border:3px solid var(--color-light-pink);
@@ -108,6 +108,7 @@
   font-weight:800;
   font-size:18px;
 cursor:pointer;
+margin-top:20px;
 }
 
 .hrContainer{
